# cpp-boilerplate

./: CMakeLists.txt  README.md
myapp/: main.cpp
mylib/: CMakeLists.txt
mylib/include/mylib/: config.h  encoder.h
mylib/src/: encoder.cpp  localheader.h
mylib/tests/: mylib_test.cpp
